# devnotifypy

./:  LICENSE  README.md  setup.cfg
demo/: test_library.py
devnotifypy/: __init__.py  notifier.py
