[metadata]
name = devnotifypy
version = 0.1.0
author = M Thamarai Priya
author_email = thamaraipriya004@gmail.com
description = Developer utilities + optional Firebase notifications library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/devnotifypy
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    psutil
    firebase-admin
